Desenvolvendo o act CalculeAgoraInicio; Montando Spinner com valores estáticos;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Main2Activity_dados_inversor" />
         <activity android:name=".Main3Activityinversor" />
         <activity android:name=".Main4ActivityModulo" />
-        <activity android:name=".Main5Activity"></activity>
+        <activity android:name=".Main5Activity" />
+        <activity android:name=".CalculeAgoraInicioActivity"></activity>
     </application>
 
 </manifest>
