--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.projetocpv.example.mateus2314.projetotcc_calculopv">
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".activities.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +20,8 @@
         <activity android:name=".activities.activities.Main2Activity_dados_inversor" />
         <activity android:name=".activities.activities.Main4ActivityModulo" />
         <activity android:name=".activities.activities.Main5Activity" />
-        <activity android:name=".activities.activities.CalculeAgoraInicioActivity"></activity>
+        <activity android:name=".activities.activities.CalculeAgoraInicioActivity" />
+        <activity android:name=".activities.activities.NormaActivity"></activity>
     </application>
 
 </manifest>
